--- a/bibliography.bib
+++ b/bibliography.bib
@@ -83,6 +83,23 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Athey_Wager_Tibshirani,
+       author = {{Athey}, Susan and {Tibshirani}, Julie and {Wager}, Stefan},
+        title = "{Generalized Random Forests}",
+      journal = {arXiv e-prints},
+     keywords = {Statistics - Methodology, Economics - Econometrics, Statistics - Machine Learning},
+         year = "2016",
+        month = "Oct",
+          eid = {arXiv:1610.01271},
+        pages = {arXiv:1610.01271},
+archivePrefix = {arXiv},
+       eprint = {1610.01271},
+ primaryClass = {stat.ME},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2016arXiv161001271A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @article{shaffer,
 author = {Shaffer, Juliet},
@@ -93,5 +110,26 @@ title = {Multiple Hypothesis Testing},
 volume = {46},
 journal = {Annual Review of Psychology},
 doi = {10.1146/annurev.ps.46.020195.003021}
+}
+
+@book{westfall,
+    author = "Peter H. Westfall and S. Stanley Young",
+    title = "Resampling-Based Multiple Testing",
+    year = {1993}
+}
+
+@article {Athey7353,
+	author = {Athey, Susan and Imbens, Guido},
+	title = {Recursive partitioning for heterogeneous causal effects},
+	volume = {113},
+	number = {27},
+	pages = {7353--7360},
+	year = {2016},
+	doi = {10.1073/pnas.1510489113},
+	publisher = {National Academy of Sciences},
+	issn = {0027-8424},
+	URL = {https://www.pnas.org/content/113/27/7353},
+	eprint = {https://www.pnas.org/content/113/27/7353.full.pdf},
+	journal = {Proceedings of the National Academy of Sciences}
 }
 
